--- a/codeless_ml/ml/transformer/BUILD
+++ b/codeless_ml/ml/transformer/BUILD
@@ -9,11 +9,70 @@ package(
 )
 
 py_library(
-    name = "model",
-    srcs = [":model.py"],
+    name = "attention",
+    srcs = ["attention.py"],
     deps = [
         requirement("tensorflow"),
         requirement("numpy"),
+    ],
+)
+
+py_library(
+    name = "decoder",
+    srcs = ["decoder.py"],
+    deps = [
+        ":attention",
+        ":ff",
+        ":positional_embedding",
+        requirement("tensorflow"),
+    ],
+)
+
+py_library(
+    name = "encoder",
+    srcs = ["encoder.py"],
+    deps = [
+        ":attention",
+        ":ff",
+        ":positional_embedding",
+        requirement("tensorflow"),
+    ],
+)
+
+py_library(
+    name = "ff",
+    srcs = ["ff.py"],
+    deps = [
+        requirement("tensorflow"),
+        requirement("numpy"),
+    ],
+)
+
+py_library(
+    name = "positional_embedding",
+    srcs = ["positional_embedding.py"],
+    deps = [
+        requirement("tensorflow"),
+        requirement("numpy"),
+    ],
+)
+
+py_library(
+    name = "schedule",
+    srcs = ["schedule.py"],
+    deps = [
+        "//codeless_ml/common:global_variable",
+        requirement("tensorflow"),
+    ],
+)
+
+py_library(
+    name = "transformer",
+    srcs = ["transformer.py"],
+    deps = [
+        ":decoder",
+        ":encoder",
+        requirement("tensorflow"),
     ],
 )
 
@@ -28,11 +87,46 @@ py_library(
 )
 
 py_test(
-    name = "model_test",
+    name = "attention_test",
     size = "small",
-    srcs = ["model_test.py"],
+    srcs = ["attention_test.py"],
     deps = [
-        ":model",
+        ":attention",
+        ":positional_embedding",
+        requirement("tensorflow"),
+        requirement("numpy"),
+    ],
+)
+
+py_test(
+    name = "decoder_test",
+    size = "small",
+    srcs = ["decoder_test.py"],
+    deps = [
+        ":decoder",
+        ":positional_embedding",
+        requirement("tensorflow"),
+        requirement("numpy"),
+    ],
+)
+
+py_test(
+    name = "encoder_test",
+    size = "small",
+    srcs = ["encoder_test.py"],
+    deps = [
+        ":encoder",
+        requirement("tensorflow"),
+        requirement("numpy"),
+    ],
+)
+
+py_test(
+    name = "ff_test",
+    size = "small",
+    srcs = ["ff_test.py"],
+    deps = [
+        ":ff",
         requirement("tensorflow"),
         requirement("numpy"),
     ],
@@ -44,6 +138,41 @@ py_test(
     deps = [
         ":loss_and_metric",
         "//codeless_ml/common:global_variable",
+        requirement("tensorflow"),
+        requirement("numpy"),
+    ],
+)
+
+py_test(
+    name = "positional_embedding_test",
+    size = "small",
+    srcs = ["positional_embedding_test.py"],
+    deps = [
+        ":positional_embedding",
+        requirement("tensorflow"),
+        requirement("numpy"),
+    ],
+)
+
+py_test(
+    name = "schedule_test",
+    size = "small",
+    srcs = ["schedule_test.py"],
+    deps = [
+        ":schedule",
+        "//codeless_ml/common:callable_py_pb2",
+        "//codeless_ml/common:global_variable",
+        requirement("tensorflow"),
+        requirement("numpy"),
+    ],
+)
+
+py_test(
+    name = "transformer_test",
+    size = "small",
+    srcs = ["transformer_test.py"],
+    deps = [
+        ":transformer",
         requirement("tensorflow"),
         requirement("numpy"),
     ],
