--- a/codeless_ml/pip/requirements.in
+++ b/codeless_ml/pip/requirements.in
@@ -1,9 +1,14 @@
 matplotlib
 numpy
 protobuf>=3.17.3
-tensorflow
+tensorflow[and-cuda]
 Keras
 parameterized>=0.7.0
 
 tensorflow_datasets
+tensorflow-hub
 tensorflow-text
+tfds-nightly
+
+transformers
+datasets
