--- a/codeless_ml/ml/artifacts/BUILD
+++ b/codeless_ml/ml/artifacts/BUILD
@@ -3,6 +3,13 @@ package(
 )
 
 filegroup(
+    name = "imagenette",
+    srcs = glob([
+        "imagenette/**",
+    ]),
+)
+
+filegroup(
     name = "ted_hrlr_translate_pt_en_converter",
     srcs = glob([
         "ted_hrlr_translate_pt_en_converter/**",
