--- a/codeless_ml/ml/examples/BUILD
+++ b/codeless_ml/ml/examples/BUILD
@@ -6,3 +6,8 @@ filegroup(
     name = "machine_translation",
     srcs = ["machine_translation.prototext"],
 )
+
+filegroup(
+    name = "vit",
+    srcs = ["vit.prototext"],
+)
