--- a/codeless_ml/pip/BUILD
+++ b/codeless_ml/pip/BUILD
@@ -2,5 +2,6 @@ load("@rules_python//python:pip.bzl", "compile_pip_requirements")
 
 compile_pip_requirements(
     name = "requirements",
+    size = "large",
     src = "requirements.in",
 )
