cache attention used in deocder

--- a/codeless_ml/ml/transformer/BUILD
+++ b/codeless_ml/ml/transformer/BUILD
@@ -12,6 +12,7 @@ py_library(
     name = "attention",
     srcs = ["attention.py"],
     deps = [
+        ":cache_attention",
         requirement("tensorflow"),
         requirement("numpy"),
     ],
