--- a/codeless_ml/ml/examples/BUILD
+++ b/codeless_ml/ml/examples/BUILD
@@ -8,6 +8,11 @@ filegroup(
 )
 
 filegroup(
+    name = "vae",
+    srcs = ["vae.prototext"],
+)
+
+filegroup(
     name = "vit",
     srcs = ["vit.prototext"],
 )
